Fixed spacing with sidebar menu

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -603,10 +603,10 @@ dialog {
     }
   }
 
-  .tools-pages {
-    .background {
-      width: calc(100% - 100px);
-      margin-left: 100px;
-    }
-  }
+  // .tools-pages {
+  //   .background {
+  //     width: calc(100% - 100px);
+  //     margin-left: 100px;
+  //   }
+  // }
 }
